fix copyright position on mobile sizes

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -53,4 +53,8 @@ html {
     html {
         font-size: 41%;
     }
+
+    .copyright {
+        top: -5rem;
+    }
 }
